--- a/404.md
+++ b/404.md
@@ -3,4 +3,85 @@ permalink: /404.html
 ---
 
 
-i was a gamer
+<title>
+	ReBLOX
+	
+</title><link rel="shortcut icon" href="https://rebloxia.github.io/backdrop/icon.ico" /><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
+<link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
+	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
+		<form name="aspnetForm" method="post" action="login" id="aspnetForm">
+
+		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
+	</head>
+	<body>
+		<div class="box" style="padding:0;width:780px;background-color:#b0c4de;">
+			<div id="banner" style="text-align:left;">
+				<div style="width:30%;height:100%;float:left;">
+				<p> <p>
+				<p> <p>
+										<a style="float:left;color:white;font-family:Verdana;font-size:12px;font-weight:bold;margin:5px;" href="http://www.nyan.cat/">ReBLOX.github.io</a>
+									</div>
+											<div style="width:33.33%;height:100%;float:left;">
+			<img src="https://rebloxia.github.io/backdrop/logo.png" style="margin:auto;">
+		</div>
+			</div>
+			
+			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/user/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
+		</h1></div>
+		
+		<div style="width:800px;margin:auto;overflow:auto;margin-top:40px;">
+								
+							</span>
+						</td>
+					</tr>
+					<tr>
+						<td style="padding-top: 16px">
+							<div style="text-align: center">
+								
+	<div id="_ctl0_ContentPlaceHolder1_Panel1">
+	
+				</div><table width="99%" style="margin-top: 5px" cellspacing="10">
+
+<!---->
+<!---->
+			<img src="https://rebloxia.github.io/backdrop/serb.jpg" style="margin:auto;">
+
+<!---->
+<!---->
+
+
+	<br>
+	
+
+										<center>
+											<br>
+											<p style="font-weight: bold; font-size: x-large">An Error occured! We're sorry.</p>
+																						<br>
+																						<br>
+											</center>
+										</td>
+									</tr>
+								</tbody></table>
+							</td>
+						</tr>
+					</tbody></table>
+				
+					
+				</tbody></table>
+
+
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td style="padding-left: 8px; padding-top: 12px">
+							<hr width="99%">
+							<div class="Legal" style="text-align: center">
+															Most of the assets on this site are from ROBLOX and I do not claim to own any of their assets.<br>
+								This website does <b>NOT</b> store your data.
+</div>
+						</td>
+					</tr>
+				</tbody></table>
+			</div>
+</body></html>
